@@ -29,16 +29,16 @@ xcmsdb_SOURCES =	\
         SCCDFile.h \
         xcmsdb.c
 
-appman_SOURCES = \
+appman_PRE = \
         xcmsdb.man
 
 EXTRA_DIST = datafiles/sample1.dcc datafiles/sample2.dcc
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
